--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,14 @@
           </dependency>
         </dependencies>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.18.1</version>
+            <configuration>
+                <forkMode>always</forkMode>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
   <reporting>
