--- a/pom.xml
+++ b/pom.xml
@@ -202,9 +202,11 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.18.1</version>
+            <version>2.21.0</version>
             <configuration>
-                <forkMode>always</forkMode>
+                <forkCount>3</forkCount>
+                <reuseForks>true</reuseForks>
+                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
             </configuration>
         </plugin>
     </plugins>
