--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,18 @@ services:
     build: ./dockerFiles/oracle-java8
     container_name: petclinic-aut
     ports:
-      - "8080:8080"
       - "9022:22"
     volumes:
       - "./docker/automation:/data"
+
+  qc:
+      build: ./dockerFiles/oracle-java8
+      container_name: petclinic-qc
+      ports:
+        - "8080:8080"
+        - "9122:22"
+      volumes:
+        - "./docker/qc:/data"
 
   bamboo:
     image: cptactionhank/atlassian-bamboo
@@ -16,4 +24,5 @@ services:
     volumes:
       - "./docker/bamboo:/var/atlassian/bamboo"
     links:
-      - aut:aut
+      - aut
+      - qc
